force-app/main/default/objects/User/fields/Allow_Edit_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Allow_Edit_Payment_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Edit Payment Terms</label>
    <type>Checkbox</type>
</CustomField>