force-app/main/default/objects/User/fields/Allow_Opportunity_Line_Item_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Allow_Opportunity_Line_Item_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Opportunity Line Item Pricing</label>
    <type>Checkbox</type>
</CustomField>