force-app/main/default/objects/User/fields/Allow_Pricebook_update_on_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Allow_Pricebook_update_on_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Pricebook update on Opportunity</label>
    <type>Checkbox</type>
</CustomField>