force-app/main/default/objects/User/fields/Allow_Surcharge_change_upon_Quote__c.field-meta.xml
<CustomField>
    <fullName>Allow_Surcharge_change_upon_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Surcharge change upon Quote</label>
    <type>Checkbox</type>
</CustomField>