force-app/main/default/objects/User/fields/Allowed_to_Re_open_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Allowed_to_Re_open_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allowed to Re-open Opportunity</label>
    <type>Checkbox</type>
</CustomField>