force-app/main/default/objects/User/fields/spa_form_approval_hierarchy__c.field-meta.xml
<CustomField>
    <fullName>spa_form_approval_hierarchy__c</fullName>
    <label>SPA Form approval hierarchy</label>
    <relationshipName>Users</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>